--- a/html/scss/app.scss
+++ b/html/scss/app.scss
@@ -385,7 +385,7 @@ input[type=password]:focus,
 #login {
 
 	.row {
-		width: 300px;
+		max-width: 300px;
 	}
 
 	h1 {
@@ -422,9 +422,12 @@ input[type=password]:focus,
    Compare Styles
 ----------------------------------------- */
 
-.container {
+#container-compare {
 	max-width:800px;
 	margin:0px auto;
+	.row {
+		max-width: 800px;
+	}
 }
 
 .box {
@@ -558,27 +561,6 @@ aside {
 	}
 }
 
-/* -----------------------------------------
-   Briefing Styles
------------------------------------------ */
-
-#form-pagination {
-	.row {
-		width: 550px;
-	}
-}
-
-#briefing-form {
-	.row {
-		width: 500px;
-	}
-
-	h3 {
-		text-transform: uppercase;
-		color: $primary-color;
-	}
-}
-
 .joyride-content-wrapper {
 	p {
 		color: white;
@@ -590,5 +572,114 @@ aside {
 	h4 {
 		font-weight: 300;
 	}
+}
+
+/* -----------------------------------------
+   Briefing Styles
+----------------------------------------- */
+
+#form-pagination {
+	.row {
+		max-width: 550px;
+	}
+}
+
+#briefing-form {
+	.row {
+		max-width: 500px;
+	}
+
+	h3 {
+		text-transform: uppercase;
+		color: $primary-color;
+	}
+}
+
+
+/* -----------------------------------------
+   Profile Styles
+----------------------------------------- */
+
+#container-profile {
+	.row {
+		max-width: 800px;
+	}
+}
+
+.button {
+	
+	margin-top: 120px;
+
+}
+
+#profile-head {
+	
+	border-top:5px solid $primary-color;
+	/*border-bottom:5px solid $primary-color;*/
+
+	h1 {
+		padding-top: 20px;
+		color: $bg-color;
+		text-transform: uppercase;
+		letter-spacing: 1px;
+		font-weight: 200;
+		font-size: 2em;
+	}
+
+	#website {
+		font-style: italic;
+		color: $bg-color;
+	}
+
+	#description {
+		text-align: justify;
+		font-style: italic;
+		padding: 0px 30px 0px 25px;
+	}
+
+	img {
+		margin: 10px 30px;
+		width: 150px;
+		border:2px solid $bg-color;
+	}
+}
+
+#profile-body {
+	background-color: $bg-color;
+	padding: 30px;
+
+	h2 {
+		font-size: 1.3em;
+		text-transform: uppercase;
+		font-weight: 300;
+	}
+}
+
+#profile-statistics {
+	/*border-top:5px solid $primary-color;*/
+	border-bottom:5px solid $primary-color;
+	padding: 5px 0px 5px 15px;
+
+	h3 {
+		color: $bg-color;
+		font-size: 1.3em;
+	}
+
+	h5 {
+		color: $bg-color;
+		font-size: 0.8em;
+		font-weight: 300;
+	}
+}
+
+#profile-comments {
+	margin: 0px auto;
+
+	max-width: 600px;
+	border-bottom: 5px solid $secondary-color;
+	background-color: $bg-color;
+	padding: 30px;
+	margin-bottom: 30px;
+	
 }
 
