--- a/html/scss/app.scss
+++ b/html/scss/app.scss
@@ -604,17 +604,18 @@ aside {
 	.row {
 		max-width: 800px;
 	}
-}
 
-.button {
-	
-	margin-top: 120px;
+	.button {
+		
+		margin-top: 120px;
 
+	}	
 }
 
 #profile-head {
 	
 	border-top:5px solid $primary-color;
+	padding: 0px 40px;
 	/*border-bottom:5px solid $primary-color;*/
 
 	h1 {
@@ -629,18 +630,34 @@ aside {
 	#website {
 		font-style: italic;
 		color: $bg-color;
+		padding-bottom: 20px;
 	}
 
 	#description {
 		text-align: justify;
 		font-style: italic;
-		padding: 0px 30px 0px 25px;
+		padding: 0px 30px -10px 25px;
 	}
 
 	img {
-		margin: 10px 30px;
+		margin: 10px;
 		width: 150px;
 		border:2px solid $bg-color;
+
+		@media only screen and (max-width: 40em) { 
+			display: block;
+			margin: 0px auto;
+			margin-bottom: 20px;
+		}
+	}
+
+	ul {
+		margin: 0px;
+
+		li {
+			display: inline-block;
+			padding: 15px 20px 20px 0px;
+		}
 	}
 }
 
@@ -653,6 +670,45 @@ aside {
 		text-transform: uppercase;
 		font-weight: 300;
 	}
+
+	ul {
+		margin: 0px;
+	
+		li {	
+			padding: 7px 15px;
+		}
+	}
+	
+	#categories {
+		position: absolute;
+		left: 5px;
+	}
+
+	#points {
+		float: left;
+		position: relative;
+		left: -86px;
+		li {	
+			color: white;
+			text-align: center;
+			font-weight: 400;
+			font-size: 1.3em;	
+			padding: 3px 16px;
+		}
+	}
+
+	#references {
+		span {
+			margin-right: 20px;
+			padding: 5px;
+			background-color: $lightgrey;
+			color: white;
+		}
+
+		li {
+			line-height: 2em;
+		}
+	}
 }
 
 #profile-statistics {
@@ -662,24 +718,38 @@ aside {
 
 	h3 {
 		color: $bg-color;
-		font-size: 1.3em;
+		font-size: 1.2em;
+		line-height: 1em;
+		font-weight: 400;
 	}
 
 	h5 {
 		color: $bg-color;
 		font-size: 0.8em;
 		font-weight: 300;
+		line-height: 1em;
 	}
 }
 
 #profile-comments {
 	margin: 0px auto;
-
 	max-width: 600px;
-	border-bottom: 5px solid $secondary-color;
+	border-bottom: 5px solid $primary-color;
 	background-color: $bg-color;
-	padding: 30px;
+	padding: 30px 0px;
 	margin-bottom: 30px;
-	
+
+	.author {
+		padding: 8px 0px;
+
+		span {
+			color: $bg-color;
+			font-size: 0.8em;
+		}
+	}
+
+	.comment {
+		font-style: italic;
+	}
 }
 
